fixed footer on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,10 @@ nav a{
 }
 
 
+ .student-footer {
+        bottom: 0%;
+        position: fixed;
+    }
 
  .publications-container {
             display: grid;
